--- a/DailySummarizing/170313/NSThreadPractice/NSThreadPractice/Base.lproj/Main.storyboard
+++ b/DailySummarizing/170313/NSThreadPractice/NSThreadPractice/Base.lproj/Main.storyboard
@@ -39,6 +39,9 @@
                                 <rect key="frame" x="262" y="226" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="멈춰"/>
+                                <connections>
+                                    <action selector="stopBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ODT-PX-r8C"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNf-Ey-1eY">
                                 <rect key="frame" x="125" y="226" width="30" height="30"/>
