--- a/DailySummarizing/170315/NetworkPractice/NetworkPractice/Login.storyboard
+++ b/DailySummarizing/170315/NetworkPractice/NetworkPractice/Login.storyboard
@@ -37,7 +37,7 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="loginBtnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HGD-Pp-xym"/>
+                                    <action selector="loginAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vwE-Ej-7uL"/>
                                 </connections>
                             </button>
                             <button opaque="NO" alpha="0.80000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FhU-kj-at0">
@@ -51,11 +51,11 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="C9t-Sf-yrY" kind="show" id="pFt-hY-GK7"/>
+                                    <segue destination="C9t-Sf-yrY" kind="presentation" id="pFt-hY-GK7"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Co-f6-pFD">
-                                <rect key="frame" x="26" y="142" width="323" height="105.5"/>
+                                <rect key="frame" x="26" y="98" width="323" height="105.5"/>
                                 <string key="text">Sign into 
 Your Account</string>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="31"/>
@@ -121,7 +121,7 @@ Your Account</string>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or sign up" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kk2-pu-7Ps">
-                                <rect key="frame" x="26" y="248" width="323" height="20"/>
+                                <rect key="frame" x="26" y="204" width="323" height="20"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -161,18 +161,18 @@ Your Account</string>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="667"/>
                     <connections>
-                        <outlet property="idTF" destination="VK0-0F-yfx" id="nUG-lp-wDZ"/>
-                        <outlet property="pwTF" destination="uys-ig-ieA" id="QV6-t7-wkk"/>
+                        <outlet property="password" destination="uys-ig-ieA" id="XhU-1L-thQ"/>
+                        <outlet property="username" destination="VK0-0F-yfx" id="Mx4-zL-1JZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2842.4000000000001" y="34.632683658170919"/>
         </scene>
-        <!--View Controller-->
+        <!--Signup View View Controller-->
         <scene sceneID="Vdl-qF-HDo">
             <objects>
-                <viewController storyboardIdentifier="SignUpViewController" id="C9t-Sf-yrY" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SignUpViewController" id="C9t-Sf-yrY" customClass="SignupViewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xTI-Vz-vJq"/>
                         <viewControllerLayoutGuide type="bottom" id="wwl-qe-1oK"/>
@@ -185,7 +185,7 @@ Your Account</string>
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CjE-yH-LLA">
-                                <rect key="frame" x="26" y="142" width="323" height="78"/>
+                                <rect key="frame" x="26" y="98" width="323" height="78"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="78" id="93r-gG-36n"/>
                                 </constraints>
@@ -286,11 +286,11 @@ New Account</string>
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="signUpAction:" destination="C9t-Sf-yrY" eventType="touchUpInside" id="0WN-5C-fVe"/>
+                                    <action selector="signupAction:" destination="C9t-Sf-yrY" eventType="touchUpInside" id="viu-Bd-dh8"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or sign up" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEI-7t-jtk">
-                                <rect key="frame" x="26" y="228" width="323" height="20"/>
+                                <rect key="frame" x="26" y="184" width="323" height="20"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -330,32 +330,14 @@ New Account</string>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <connections>
-                        <outlet property="idTF" destination="Oyp-By-X6I" id="Tjg-PW-bFP"/>
-                        <outlet property="passWordTF" destination="0zG-wQ-JEp" id="j68-Zs-w8Y"/>
-                        <outlet property="pwConfirm" destination="6L2-2G-Mv8" id="ZWb-5c-bBC"/>
+                        <outlet property="password1" destination="0zG-wQ-JEp" id="JQk-lc-5Zq"/>
+                        <outlet property="password2" destination="6L2-2G-Mv8" id="40z-yG-yns"/>
+                        <outlet property="username" destination="Oyp-By-X6I" id="wlU-Sa-AFa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QjA-HG-mZN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3570.4000000000001" y="34.632683658170919"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="mao-kY-ltb">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zIq-3i-89d" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ASj-ax-RQs">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="BIt-ab-17V"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aTK-Il-fZO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1903.2" y="34.632683658170919"/>
         </scene>
     </scenes>
     <resources>
