--- a/DailySummarizing/170315/NetworkPractice/NetworkPractice/MainCollectionViewCell.xib
+++ b/DailySummarizing/170315/NetworkPractice/NetworkPractice/MainCollectionViewCell.xib
@@ -22,17 +22,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="190" height="260"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lyd-ON-0DH">
-                                <rect key="frame" x="8" y="8" width="174" height="138"/>
-                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="8" y="8" width="174" height="190"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNg-Pl-WjW">
-                                <rect key="frame" x="8" y="160" width="35.5" height="17"/>
+                                <rect key="frame" x="8" y="206" width="35.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mv-4Z-DsX">
-                                <rect key="frame" x="8" y="204" width="174" height="21"/>
+                                <rect key="frame" x="8" y="231" width="174" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -41,10 +41,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="lyd-ON-0DH" secondAttribute="trailing" constant="8" id="Gj5-5f-NDn"/>
-                            <constraint firstItem="hNg-Pl-WjW" firstAttribute="top" secondItem="lyd-ON-0DH" secondAttribute="bottom" constant="14" id="Mk9-jM-VOu"/>
-                            <constraint firstItem="7mv-4Z-DsX" firstAttribute="top" secondItem="hNg-Pl-WjW" secondAttribute="bottom" constant="27" id="Pc1-8e-q5b"/>
+                            <constraint firstItem="hNg-Pl-WjW" firstAttribute="top" secondItem="lyd-ON-0DH" secondAttribute="bottom" constant="8" id="Mk9-jM-VOu"/>
+                            <constraint firstItem="7mv-4Z-DsX" firstAttribute="top" secondItem="hNg-Pl-WjW" secondAttribute="bottom" constant="8" id="Pc1-8e-q5b"/>
                             <constraint firstItem="lyd-ON-0DH" firstAttribute="top" secondItem="wOL-w9-1yw" secondAttribute="top" constant="8" id="S6N-ho-2Hb"/>
-                            <constraint firstAttribute="bottom" secondItem="7mv-4Z-DsX" secondAttribute="bottom" constant="35" id="TJk-PN-ko6"/>
+                            <constraint firstAttribute="bottom" secondItem="7mv-4Z-DsX" secondAttribute="bottom" constant="8" id="TJk-PN-ko6"/>
                             <constraint firstItem="hNg-Pl-WjW" firstAttribute="leading" secondItem="wOL-w9-1yw" secondAttribute="leading" constant="8" id="ZAR-Vr-7CU"/>
                             <constraint firstItem="7mv-4Z-DsX" firstAttribute="leading" secondItem="wOL-w9-1yw" secondAttribute="leading" constant="8" id="aK5-Wz-xRU"/>
                             <constraint firstItem="lyd-ON-0DH" firstAttribute="leading" secondItem="wOL-w9-1yw" secondAttribute="leading" constant="8" id="li6-Nl-1Ic"/>
